--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
   --color-black: #141415;
   --color-primary: #f24e1e;
   --color-primary-light: rgb(252, 169, 169);
-  --color-success: #29fbab;
+  --color-success: #ff0000;
   --color-warning: #ffce31;
 
   --small-font-size: 0.9em;
@@ -225,11 +225,6 @@ header.sticky .nav-bar {
   margin-top: 20px;
 }
 
-.home .scroll-down:hover {
-  color: var(--color-warning);
-  text-decoration: underline;
-}
-
 .home .scroll-down i {
   color: var(--scroll-thumb-hover-color);
   font-size: 1.2em;
@@ -243,6 +238,15 @@ header.sticky .nav-bar {
   30% {
     transform: translateY(10px);
   }
+}
+
+.home .scroll-down {
+  display: flex;
+  flex-direction: column;
+}
+
+.home .scroll-down i {
+  margin-left: 40px;
 }
 
 /* ====== styles for all sections =====  */
@@ -378,11 +382,11 @@ header.sticky .nav-bar {
 }
 
 .skills-info {
-max-width: 100%;
-display: grid;
-grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-gap: 20px;
-margin: 0 auto;
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  margin: 0 auto;
 }
 
 .skills-info h4 {
@@ -409,7 +413,7 @@ margin: 0 auto;
   padding: 20px;
   margin-top: 15px;
   border-radius: 6px;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .edu-list .item .year {
@@ -436,7 +440,7 @@ margin: 0 auto;
   margin-bottom: 10px;
   padding: 20px;
   border-radius: 6px;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .bar .info {
@@ -460,14 +464,14 @@ margin: 0 auto;
 }
 
 .bar .line:before {
- content: "";
- position: absolute;
- height: 100%;
- top: 0;
- left: 0;
- background: var(--color-primary-light);
- border-radius: 2px;
- width: 97%;
+  content: "";
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: var(--color-primary-light);
+  border-radius: 2px;
+  width: 97%;
 }
 
 .bar .html:before {
@@ -545,10 +549,133 @@ margin: 0 auto;
   margin: 10px 0 22px;
 }
 
-.edu-list .item:hover, .bar:hover, .experience-card:hover {
+.edu-list .item:hover,
+.bar:hover,
+.experience-card:hover {
   transform: scale(1.03);
 }
 
+/* ===== services section ====  */
+.services .container .content {
+  width: 100%;
+}
 
+.services-description h3 {
+  font-size: 2em;
+  margin-bottom: 50px;
+}
 
+.service-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  max-width: 100%;
+  margin: 0 auto;
+  gap: 20px;
+}
 
+.service-card {
+  background: var(--scroll-bar-color);
+  border-bottom: 5px solid var(--color-dark);
+  padding: 50px;
+  border-radius: 6px;
+  box-shadow: 10px 10px 2px 2px #c0bfbf;
+}
+
+.service-card > i {
+  color: var(--color-primary);
+  font-size: 3em;
+  margin-bottom: 28px;
+}
+
+.service-card h3 {
+  font-size: 1.5em;
+  font-weight: 700;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+
+.service-card .learn-more-btn {
+  color: var(--color-success);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.service-card .learn-more-btn i {
+  transition: 0.3s ease;
+}
+
+.service-card:hover .learn-more-btn i {
+  transform: translateX(10px);
+}
+
+.service-modal {
+  z-index: 999999;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+/* for js on service card start here */
+.service-modal.active {
+  visibility: visible;
+  opacity: 1;
+}
+/* for js on service card end here */
+
+.service-modal-body {
+  position: relative;
+  background: var(--color-white);
+  max-width: 600px;
+  margin: 20px;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 0px 0px rgb(221, 221, 221);
+  transform: translateY(-50px);
+  transition: .5s ease;
+}
+
+/* for js on service card start here */
+.service-modal.active .service-modal-body {
+  transform: translateY(0);
+}
+/* for js on service card end here */
+
+.service-modal-body .modal-close-btn {
+  position: relative;
+  top: 0;
+  right: 0;
+  left: 100%;
+  font-size: 1.5rem;
+  /* margin: 20px; */
+  cursor: pointer;
+  color: var(--color-success);
+}
+
+.service-modal-body .modal-close-btn:hover {
+  color: var(--scroll-thumb-hover-color);
+}
+
+.service-modal-body h3 {
+  font-size: 2em;
+}
+
+.service-modal-body h4 {
+  font-size: 1.3em;
+  font-weight: 600;
+  margin: 15px 0 10px;
+}
+
+.service-modal-body ul li {
+  margin-top: 15px;
+}
+
+.service-modal-body ul li i {
+  color: var(--scroll-thumb-hover-color);
+}
