--- a/styles.css
+++ b/styles.css
@@ -598,8 +598,6 @@ header.sticky .nav-bar {
   color: var(--color-success);
   cursor: pointer;
   transition: 0.3s ease;
-
-  
 }
 
 .service-card .learn-more-btn i {
@@ -757,7 +755,7 @@ header.sticky .nav-bar {
   backdrop-filter: blur(20px);
   visibility: hidden;
   opacity: 0;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 /* portfolio js start here  */
@@ -775,7 +773,7 @@ header.sticky .nav-bar {
   border-radius: 10px;
   box-shadow: 7px 7px 7px 0px #000505;
   transform: translateY(-50px);
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 
 .portfolio-modal.active .portfolio-modal-body {
@@ -845,7 +843,11 @@ header.sticky .nav-bar {
 .contact-card .title h2 {
   font-size: 3.9em;
   font-weight: 600;
-  background: linear-gradient(to top, transparent 0%, var(--scroll-thumb-hover-color) 30%);
+  background: linear-gradient(
+    to top,
+    transparent 0%,
+    var(--scroll-thumb-hover-color) 30%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 9;
@@ -895,21 +897,189 @@ header.sticky .nav-bar {
 }
 
 .client-details h3 {
- color: var(--scroll-thumb-hover-color);
+  color: var(--scroll-thumb-hover-color);
   font-size: 1.5em;
 }
 
 .client-details span {
- color: var(--color-dark);
+  color: var(--color-dark);
   font-size: 1.1em;
 }
 
-
-.swiper-button-next:after, .swiper-button-prev:after {
-  content: '';
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  content: "";
   visibility: hidden;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   font-size: 2em;
 }
+
+/* ====== CONTACT SECTION ====  */
+.contact .container .content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.content-left h2 {
+  font-size: 2.1em;
+  font-weight: 800;
+  margin-bottom: 30px;
+}
+
+.contact-list li {
+  margin-bottom: 40px;
+}
+
+.contact-list li h3 {
+  font-size: 1.3em;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact-list li h3 i {
+  color: var(--color-dark);
+  font-size: 1.3em;
+  margin-right: 10px;
+}
+
+.contact-list li span {
+  color: var(--scroll-thumb-hover-color);
+  margin-left: 40px;
+}
+
+.contact-list li span a {
+  color: var(--scroll-thumb-color);
+}
+
+.contact-right p {
+  color: var(--scroll-thumb-color);
+  font-size: 1.6em;
+  margin-bottom: 30px;
+}
+
+.contact-right p span {
+  color: var(--scroll-thumb-hover-color);
+  font-weight: 700;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: none;
+  color: var(--scroll-thumb-hover-color);
+  background: var(--scroll-bar-color);
+  font-size: var(--normal-font-size);
+  margin-bottom: 20px;
+  padding: 15px 40px 40px 20px;
+  border-radius: 5px;
+}
+
+.contact-form textarea {
+  width: 100%;
+  resize: none;
+}
+
+::placeholder {
+  color: var(--scroll-thumb-hover-color);
+}
+
+.contact-form .first-row input {
+  width: 100%;
+}
+
+.contact-form .second-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-form .second-row input{
+  width: 48%;
+}
+
+.contact-form .btn {
+  border: none;
+  margin-top: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  background: var(--scroll-thumb-hover-color);
+}
+
+.contact-form .btn:hover {
+  background: var(--color-primary);
+  color: var(--scroll-bar-color);
+}
+
+/* -------FOOTER SECTION -------  */
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background:  #6abfad;
+  width: 100%;
+  margin-top: 50px;
+  padding: 3rem 2rem;
+  color: var(--color-background);
+}
+
+footer a {
+  color: var(--color-background);
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1150px;
+}
+
+.footer-container .about h2{
+  font-size: 3em;
+  font-weight: 600;
+  background: linear-gradient(to top, transparent 0%, #ffff 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 8;
+}
+
+.footer-container .about p {
+  flex: var(--normal-font-size);
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+.footer-container .info, .footer-container .follow  {
+display: flex;
+align-items: center;
+flex-direction: column;
+}
+
+.footer-container .info h3, .footer-container .follow h3 {
+font-size: 1.1em;
+font-weight: 500;
+margin-bottom: 30px;
+}
+
+.footer-container .info ul, .footer-container .follow ul {
+  display: flex;
+}
+
+.footer-container .info a {
+  margin: 20px;
+}
+
+.footer-container .follow a {
+  font-size: 1.5em;
+  margin: 20px;
+}
+
+.footer-copyright p {
+  font-size: var(--normal-font-size);
+  font-weight: 300;
+  margin-top: 50px;
+}
+
+
