--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,9 @@
 
 /* ==== global css variables ====  */
 :root {
-  /* --primary-color: #dc143c;
-    --secondary-color: #6a59d1;
-    --sub-color: #777;
-    --hover-color: #d6538c;
-    --body-bg-color: #ffffff;
-    --text-color: #080707;
-    --transparent-bg-color: rgba(0, 0, 0, 0.1);
-    --line-color: #d7d7d7;
-   
-    --box-shadow: rgba(0 0 0 / 10%); */
 
   --color-white: #fff;
+  --color-dark-green: #1A3836;
   --color-background: #f6f6f6;
   --color-light: #e6e1ec;
   --color-dark: #525252;
@@ -114,14 +105,14 @@ li {
   z-index: 999999;
   position: fixed;
   right: 0;
-  top: 100px;
+  top: 90px;
   background: transparent;
   backdrop-filter: blur(20px);
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
   font-size: 1.2em;
   border-radius: 5px 0 0 5px;
-  box-shadow: -2px 1px 0px 4px var(--scroll-thumb-hover-color);
+  box-shadow: -2px 1px 0px 4px rgb(221, 221, 255);
   cursor: pointer;
 }
 
@@ -297,11 +288,11 @@ header.sticky .nav-bar {
 }
 
 .home-container .home-img img {
-  width: 310px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
-  border: 4px solid var(--scroll-thumb-hover-color);
-  transform: translate(0, 0);
+  border: 2px solid var(--scroll-thumb-hover-color);
+  /* transform: translate(0, 0); */
 }
 
 .home .scroll-down {
@@ -343,14 +334,14 @@ header.sticky .nav-bar {
 
 .section {
   position: relative;
-  width: 1150px;
+  max-width: 1150px;
   margin-left: auto;
   margin-right: auto;
   padding: 6rem 2rem 2rem;
 }
 .sub-section {
   position: relative;
-  width: 1150px;
+  max-width: 1150px;
   margin-right: auto;
   margin-left: auto;
   padding: 6rem 0;
@@ -439,6 +430,14 @@ header.sticky .nav-bar {
 .about-info .professional-list {
   display: flex;
   column-gap: 30px;
+}
+
+.about-info .professional-list .list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 15px;
+  margin-bottom: 20px;
 }
 
 .about-info .professional-list .list-item h3 {
@@ -1013,6 +1012,7 @@ header.sticky .nav-bar {
   font-size: 2.1em;
   font-weight: 800;
   margin-bottom: 30px;
+  color: var(--color-dark-green);
 }
 
 .contact-list li {
@@ -1103,7 +1103,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: var(--scroll-bar-color);
+  background: var(--color-dark-green);
   width: 100%;
   margin-top: 50px;
   padding: 3rem 2rem;
@@ -1183,6 +1183,14 @@ footer a {
     justify-content: center;
     align-items: center;
     background: var(--transparent-color);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease;
+  }
+
+  .navigation.active {
+    visibility: visible;
+    opacity: 1;
   }
 
   .nav-menu-btn {
@@ -1192,8 +1200,8 @@ footer a {
     background-position: center;
     width: 40px;
     height: 40px;
-    cursor: pointer;
     display: block;
+    cursor: pointer;
   }
 
   .nav-items {
@@ -1208,8 +1216,193 @@ footer a {
     padding: 40px;
     border-radius: 10px;
     box-shadow: var(--box-shadow);
+    transform: translateY(-50px);
+    transition: 0.3s ease;
   }
 
+  .navigation.active .nav-items {
+    transform: translateY(0);
+  }
 
+  .nav-items a {
+    margin: 15px 50px;
+  }
+
+  .nav-close-btn {
+    position: absolute;
+    background: url(/images/close-btn.png) no-repeat;
+    filter: var(--color-light);
+    background-size: 12px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    cursor: pointer;
+  }
+
+  /* Home section  */
+
+  .home-container .home-img img {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 2px solid var(--color-dark-green);
+  transform: translateY(0, 0);
+}
+
+
+  .home .home-container .info {
+    font-size: 0.85rem;
+  }
+
+  /* About section  */
+
+ .about .container .content {
+  display: grid;
+  width: 100%;
+  row-gap: 20px;
+ }
+
+ .about-img img {
+  min-width: 0;
+  width: 100%;
+ }
+
+ .about-info {
+  min-width: 0;
+  width: 100%;
+ }
+
+ .about-info .professional-list {
+  flex-direction: column;
+ }
+
+ .about-info .professional-list .list-item {
+  justify-content: start;
+ }
+
+ /* Get in touch  */
+ .get-in-touch .contact-card {
+  display: grid;
+  width: 100%;
+ }
+
+ .contact-card .title {
+  font-size: 0.8rem;
+  line-height: 50px;
+ }
+
+ /* My Clients  */
+ .client-swiper .swiper-slide {
+  flex-direction: column;
+ }
+
+ .client-details {
+  text-align: center;
+ }
+
+ /* Contact Section  */
+.contact .content {
+flex-direction: column;
+font-size: 0.9rem;
+}
+
+.contact .content-left {
+  margin-bottom: 40px;
+}
+
+.contact-form .second-row {
+  flex-direction: column;
+}
+
+.contact-form .second-row input {
+  width: 100%;
+}
+
+/* ----Footer ---  */
+footer .footer-container {
+  flex-direction: column;
+}
+
+.footer-container .about, .footer-container .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+
+.footer-container .info ul {
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer-container .info ul li {
+  margin: 5px 0;
+}
+
+.footer-container .hr {
+  width: 100%;
+  height: 2px;
+  background: rgba(64, 48, 48, 0.5);
+  margin: 10px 0 22px;
+}
+}
+
+/*  -------- Media queries max-width 730px  ----- */
+@media screen and (max-width: 730px) {
+  /* ------- common styles for all section ------  */
+  body {
+    margin: 5rem 0 0 0;
+  }
+
+  .section-title-01 {
+    font-size: 3em;
+  }
+
+  .section-title-02 {
+    font-size: 2em;
+    transform: translateY(-65px);
+  }
+
+  /* home section -----  */
+  .home .home-container {
+    display: grid;
+  }
+
+  .home-container .home-img {
+    position: absolute;
+  }
+
+   .home-container .home-img img {
+   width: 300px;
+   height: 300px;
+   transform: translate(80px, -180px);
+  }
+
+  .home .home-container .info {
+    font-size: 0.8rem;
+  }
+
+  .media-icons {
+    margin-bottom: 80px;
+  }
+
+   /* --Get in touch section --  */
+   .get-in-touch .contact-card {
+    display: grid;
+   }
+
+   .contact-card .title {
+    font-size: 0.6rem;
+    line-height: 40px;
+   }
+
+   .contact-card .contact-btn .btn {
+    font-size: 0.8rem;
+   }
 
 }
+
