--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ header.sticky .nav-bar {
 .home-container .info h2 {
   font-size: 2.7em;
   font-weight: 600;
-  line-height: 70px;
+  line-height: 50px;
   text-shadow: 4px 4px 2px var(--scroll-thumb-color);
 }
 
@@ -300,7 +300,7 @@ header.sticky .nav-bar {
 
 .home .scroll-down {
   color: var(--scroll-thumb-hover-color);
-  font-weight: 500;
+  font-weight: 600;
   margin-top: 20px;
 }
 
@@ -1441,7 +1441,7 @@ footer a {
   .home-container .home-img img {
     width: 250px;
     height: 250px;
-    margin-bottom: 13rem;
+    /* margin-bottom: 11rem; */
     transform: translate(80px, -180px);
   }
 
