--- a/styles.css
+++ b/styles.css
@@ -758,8 +758,8 @@ header.sticky .nav-bar {
   position: relative;
   background: var(--color-white);
   max-width: 600px;
-  margin: 20px;
-  padding: 40px;
+  margin: 10px;
+  padding: 30px;
   border-radius: 10px;
   box-shadow: 10px 10px 0px 0px rgb(221, 221, 221);
   transform: translateY(-50px);
@@ -922,13 +922,16 @@ header.sticky .nav-bar {
 
 .portfolio-modal-body h3 {
   font-size: 1.5em;
+  color: var(--color-success);
 }
 
 .portfolio-modal-body img {
   padding: 0;
   width: 100%;
+  /* height: 10%; */
   margin: 0;
-  border-radius: 10px;
+  /* margin: 50%; */
+  border-radius: 10PX;
 }
 
 .portfolio-modal .btn {
