--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 
 .dark-theme {
   --color-white: #fff;
-  --color-background: #a9aaa9;
+  --color-background: #a4e1ff;
   --color-light: #e6e1ec;
   --color-dark: #525252;
   --color-black: #141415;
@@ -46,7 +46,7 @@
   --scroll-bar-color: #24382c;
   --scroll-thumb-color: #70768a;
   --scroll-thumb-hover-color: #132447;
-  --scroll-thumb-hover-color: #062900;
+  --scroll-thumb-hover-color: #454f6b;
 }
 
 * {
@@ -287,11 +287,11 @@ header.sticky .nav-bar {
 }
 
 .home-container .home-img img {
-  /* min-width: 100%;
-  max-width: 340px; */
+   min-width: 100%;
+  max-width: 340px;
 
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   /* border-radius: 50%; */
   border: 2px solid var(--scroll-thumb-hover-color);
@@ -1014,20 +1014,20 @@ header.sticky .nav-bar {
 }
 
 .client-img {
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  height: 150px;
   overflow: hidden;
-  border-radius: 10%;
+  border-radius: 50%;
 }
 
 .client-img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .client-details {
-  width: 500px;
+  width: 400px;
 }
 
 .client-details p {
@@ -1113,7 +1113,7 @@ header.sticky .nav-bar {
 .contact-form textarea {
   border: none;
   color: var(--scroll-thumb-hover-color);
-  background: var(--scroll-bar-color);
+  /* background: var(--scroll-bar-color); */
   font-size: var(--normal-font-size);
   margin-bottom: 20px;
   padding: 15px 40px 40px 20px;
@@ -1459,9 +1459,10 @@ footer a {
     font-size: 0.8rem;
   }
 
-  .media-icons {
-    margin-bottom: 80px;
+  .media-icons i {
+    margin-bottom: 40px;
   }
+
 
   /* portfolio  */
   
