--- a/styles.css
+++ b/styles.css
@@ -1439,11 +1439,12 @@ footer a {
 
   .home-container .home-img {
     position: absolute;
+    margin-top: 3rem;
   }
 
   .home-container .home-img img {
-    width: 160px;
-    height: 160px;
+    width: 200px;
+    height: 200px;
     /* margin-bottom: 11rem; */
     transform: translate(80px, -180px);
   }
@@ -1460,7 +1461,7 @@ footer a {
   }
 
   .media-icons i {
-    margin-bottom: 40px;
+    margin-bottom: 2rem;
   }
 
 
