--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 :root {
   --color-white: #fff;
   --color-dark-green: #1a3836;
-  --color-background: #f6f6f6;
+  --color-background:  #fcbdbd;
   --color-light: #e6e1ec;
   --color-dark: #525252;
   --color-black: #141415;
@@ -27,7 +27,7 @@
 
 .dark-theme {
   --color-white: #fff;
-  --color-background: #fcbdbd;
+  --color-background: #f6f6f6;
   --color-light: #e6e1ec;
   --color-dark: #525252;
   --color-black: #141415;
@@ -174,7 +174,7 @@ header.sticky .nav-bar {
 
 .nav-bar .logo {
   color: var(--color-primary);
-  font-size: 1.3em;
+  font-size: 1.4em;
   font-weight: 600;
 }
 
@@ -396,7 +396,7 @@ header.sticky .nav-bar {
 }
 
 .about-img img {
-  min-width: 100%;
+  width: 100%;
   max-width: 340px;
   border-radius: 10px;
   border: 1px solid var(--scroll-thumb-hover-color);
